fix: Broken layout of store template 3 if EU compliance data exists

--- a/assets/src/less/store.less
+++ b/assets/src/less/store.less
@@ -1107,16 +1107,15 @@
                         background-color: #fff;
                         color: #444;
                         border: 1px solid @borderColor;
-                        height: 220px;
 
                         .profile-info-summery {
                             width: 100%;
+                            margin-top: -75px;
                             padding-top: 0;
                             background: none;
 
                             .profile-info-head {
                                 position: relative;
-                                top: -75px;
 
                                 .profile-img {
 
@@ -1132,7 +1131,6 @@
 
                             .profile-info {
                                 position: relative;
-                                top: -40%;
 
                                 .store-name {
                                     color: inherit;
